fixed copyright page details

--- a/dreams-must-die.html
+++ b/dreams-must-die.html
@@ -77,7 +77,7 @@ p.also_by
   margin-top:1em;
   text-indent: 0em;
   text-align: center;
-  margin-bottom: 1em;
+  margin-bottom: 0.5em;
   font-weight: bold;
   text-transform:uppercase;
 }
@@ -3643,13 +3643,12 @@ J.M. Porup
 <p class="also_by_title"><a href="http://www.jmporup.com/a-terrorist-converts-2.html">A Terrorist Converts: How I Learned to Love the NSA</a></p>
 <p class="also_by_title">A Terrorist Converts: Why I&rsquo;m Voting For Hilary Clinton (Coming Soon!)</p>
 
-<p class="copyright_title"><span class="centered">A Terrorist Converts</span></p>
+<p class="copyright_title"><span class="centered">Dreams Must Die</span></p>
 <p>&nbsp;</p>
-<p class="copyright_subtitle"><span class="centered">How I Learned to Stop Hating America</span></p>
+<p class="copyright_subtitle"><span class="centered">A Fable of the Far Future</span></p>
 <p>&nbsp;</p>
 
-<p class="copyright_author"><span class="centered">Copyright &copy; 2014 by Shazam al-War bin al-Gorithm</span></p>
-<p class="copyright_real_author"><span class="centered">Translation Copyright &copy; 2014 by J.M. Porup</span></p>
+<p class="copyright_author"><span class="centered">Copyright &copy; 2014 by J.M. Porup</span></p>
 
 <p>&nbsp;</p>
 <p class="copyright_page_details"><span class="centered">Smashwords Edition</span></p>
@@ -3661,8 +3660,8 @@ J.M. Porup
 
 <p>&nbsp;</p>
 <p class="copyright_page_details"><span class="centered">Published by J.M. Porup</span></p>
-<p class="copyright_page_details"><span class="centered">epub ISBN: 9781311754547</span></p>
-<p class="copyright_page_details"><span class="centered">ASIN: B00KJFERMS</span></p>
+<p class="copyright_page_details"><span class="centered">epub ISBN: </span></p>
+<p class="copyright_page_details"><span class="centered">ASIN: </span></p>
 
 <p>&nbsp;</p>
 
