updated Also By back matter

--- a/dreams-must-die.html
+++ b/dreams-must-die.html
@@ -74,7 +74,7 @@ p.blurb_text
 }
 p.also_by
 {
-  margin-top:1em;
+  margin-top:1.0em;
   text-indent: 0em;
   text-align: center;
   margin-bottom: 0.5em;
@@ -3641,7 +3641,7 @@ J.M. Porup
 <p class="also_by"><span class="centered">With Shazam al-War bin al-Gorithm</span></p>
 <p class="also_by_title"><a href="http://www.jmporup.com/a-terrorist-converts.html">A Terrorist Converts: How I Stop Hating America</a></p>
 <p class="also_by_title"><a href="http://www.jmporup.com/a-terrorist-converts-2.html">A Terrorist Converts: How I Learned to Love the NSA</a></p>
-<p class="also_by_title">A Terrorist Converts: Why I&rsquo;m Voting For Hilary Clinton (Coming Soon!)</p>
+<p class="also_by_title"><a href="http://www.jmporup.com/a-terrorist-converts-3.html">A Terrorist Converts: Why I&rsquo;m Voting For Hilary Clinton</a></p>
 
 <p class="copyright_title"><span class="centered">Dreams Must Die</span></p>
 <p>&nbsp;</p>
