--- a/dreams-must-die.html
+++ b/dreams-must-die.html
@@ -180,8 +180,7 @@ But when Shade himself gets infected with a dream, he finds himself on the run f
 </em>
 </p>
 
-<p class="title"><span class="centered">DREAMS MUST DIE:</span></p>
-<p class="subtitle"><span class="centered">A Fable of the Far Future</span></p>
+<p class="title"><span class="centered">DREAMS MUST DIE</span></p>
 <p>&nbsp;</p>
 <p class="author"><span class="centered">By</span></p>
 <p class="author"><span class="centered">J.M. Porup</span></p>
@@ -3644,8 +3643,6 @@ J.M. Porup
 <p class="also_by_title"><a href="http://www.jmporup.com/a-terrorist-converts-3.html">A Terrorist Converts: Why I&rsquo;m Voting For Hilary Clinton</a></p>
 
 <p class="copyright_title"><span class="centered">Dreams Must Die</span></p>
-<p>&nbsp;</p>
-<p class="copyright_subtitle"><span class="centered">A Fable of the Far Future</span></p>
 <p>&nbsp;</p>
 
 <p class="copyright_author"><span class="centered">Copyright &copy; 2014 by J.M. Porup</span></p>
