--- a/dreams-must-die.html
+++ b/dreams-must-die.html
@@ -176,7 +176,7 @@ Jimmy Shade kills dreams. It&rsquo;s his job. As a member of the elite Dream Pol
 <p>&nbsp;</p>
 <p class="blurb_text">
 <em>
-But when Shade himself gets infected with a dream, he finds himself on the run from his former colleagues. He must choose between his love for the Collective&mdash;and the dream he cannot live without.
+But when Shade gets infected with a dream, he finds himself on the run from his former colleagues. He must choose between his love for the Collective&mdash;and the dream he cannot live without.
 </em>
 </p>
 
