--- a/dreams-must-die.html
+++ b/dreams-must-die.html
@@ -3564,8 +3564,8 @@ J.M. Porup
 
 <p>&nbsp;</p>
 <p class="copyright_page_details"><span class="centered">Published by J.M. Porup</span></p>
-<p class="copyright_page_details"><span class="centered">epub ISBN: </span></p>
-<p class="copyright_page_details"><span class="centered">ASIN: </span></p>
+<p class="copyright_page_details"><span class="centered">epub ISBN: 9781311996718</span></p>
+<p class="copyright_page_details"><span class="centered">ASIN: B00MWEJTF4</span></p>
 
 <p>&nbsp;</p>
 
