--- a/dreams-must-die.html
+++ b/dreams-must-die.html
@@ -2154,7 +2154,7 @@ But when Shade gets infected with a dream, he finds himself on the run from his 
 <p>Except for you, Kann thought. <em>You haven&rsquo;t been unplugged like the others. Just think&mdash;soon you&rsquo;ll be a useful member of society once again!</em></p>
 <p>This interaction had taken less than a millisecond.</p>
 <p>Shade whispered, both out loud and in his head, &ldquo;But&hellip;my song&hellip;&rdquo;</p>
-<p><em>It&rsquo;s cool! We&rsquo;ll kill it for you!&rdquo;</em></p>
+<p><em>It&rsquo;s cool! We&rsquo;ll kill it for you!</em></p>
 <p>&ldquo;But my song is for the Collective!&rdquo;</p>
 <p>Kann chuckled inside Shade&rsquo;s head. <em>They&rsquo;ve been fucking with you, man. Don&rsquo;t worry. We&rsquo;re here to cure you. </em><em>ChemLob ought to do the trick.</em></p>
 <p><em>ChemLob? Why? Waking dreamers always get unplugged!</em></p>
