fixed italics issue in chapter two

--- a/dreams-must-die.html
+++ b/dreams-must-die.html
@@ -392,21 +392,21 @@ But when Shade gets infected with a dream, he finds himself on the run from his 
 <p>The melee wound down. The Prime offered no resistance, just lay there and let the police stomp on him. Soon he was stretched out on the ground, trussed from scalp to toes in the dream jacket.</p>
 <p>A tribunal assembled, found the man guilty, and sentenced him to incarceration in the Hall of Dreams.</p>
 <p>But Shade paid little attention to the proceedings. He was lost in his own disturbing thoughts.</p>
-<p>Hey Shade, man, you alright? Kann stood at his side.</p>
-<p>I dunno. I feel&hellip;funny.</p>
-<p>Funny how? Kann stepped into Shade&rsquo;s mind and poked around. Looking good to me, bro.</p>
-<p>I suppose. Shade touched a finger to his temple. What did he mean by that, do you think?</p>
-<p>Mean by what?</p>
-<p>What the Prime said. You know, out loud.</p>
+<p><em>Hey Shade, man, you alright?</em> Kann stood at his side.</p>
+<p><em>I dunno. I feel&hellip;funny.</em></p>
+<p><em>Funny how?</em> Kann stepped into Shade&rsquo;s mind and poked around. <em>Looking good to me, bro.</em></p>
+<p><em>I suppose.</em> Shade touched a finger to his temple. <em>What did he mean by that, do you think?</em></p>
+<p><em>Mean by what?</em></p>
+<p><em>What the Prime said. You know, out loud.</em></p>
 <p>Kann replayed the memory in their minds.</p>
-<p>&ldquo;&rsquo;i don&rsquo;t understand i&rsquo;m tired i&rsquo;ve had a long day must rest to better serve the collective you must have the wrong man&rsquo;.&rdquo;</p>
-<p>No. After that.</p>
-<p>&ldquo;&rsquo;One of you has been chosen&rsquo;? You mean that bit?&rdquo;</p>
-<p>No! Shade thought, in mounting frustration. &ldquo;&rsquo;Do you love her?&rsquo;&rdquo;</p>
-<p>Kann gave him a strange look. He didn&rsquo;t say that.</p>
-<p>Sure he did.</p>
-<p>His partner lay a hand on his arm. Did you let him into your mind? Did he head-hop?</p>
-<p>Of course not! Shade pulled away. He said&mdash;</p>
+<p><em>&ldquo;i don&rsquo;t understand i&rsquo;m tired i&rsquo;ve had a long day must rest to better serve the collective you must have the wrong man.&rdquo;</em></p>
+<p><em>No. After that.</em></p>
+<p><em>&ldquo;One of you has been chosen&rdquo;? You mean that bit?</em></p>
+<p><em>No!</em> Shade thought, in mounting frustration. <em>&ldquo;Do you love her?&rdquo;</em></p>
+<p>Kann gave him a strange look. <em>He didn&rsquo;t say that.</em></p>
+<p><em>Sure he did.</em></p>
+<p>His partner lay a hand on his arm. <em>Did you let him into your mind? Did he head-hop?</em></p>
+<p><em>Of course not!</em> Shade pulled away. <em>He said&mdash;</em></p>
 <p>Linda.</p>
 <p>Do you love her?</p>
 <p>Linda. Linda. Linda.</p>
