--- a/dreams-must-die.html
+++ b/dreams-must-die.html
@@ -302,7 +302,7 @@ But when Shade gets infected with a dream, he finds himself on the run from his 
 <p>Shade tilted back until the chair squeaked. Primes were the source of all dreams. The dreamers he spent his nights ChemLobbing could all trace their infection back to a Prime. <em>But we haven&rsquo;t caught a Prime in&hellip;</em></p>
 <p><em>Like I said. We found him. Now we&rsquo;ve got to go catch him.</em> Boss blew a smoke ring and it hung in the air between them. <em>Preferably without anyone getting hurt.</em></p>
 <p><em>Where?</em> Shade thought. <em>I mean, how? I mean&mdash;</em></p>
-<p><em>Information Factory &nbsp;1Q79A5. The Prime&rsquo;s working undercover.</em></p>
+<p><em>Information Factory  #1Q79A5. The Prime&rsquo;s working undercover.</em></p>
 <p>As an IF worker?</p>
 <p>The Collective processed ten billion minds&rsquo; worth of stimulation every day. A large portion of humanity was dedicated to the sole purpose of handling that information, categorizing it, grading it, and storing it. Nothing was ever thrown away, and the processed data was then warehoused in compressed chunks deep in the minds of the Collective&rsquo;s nodes.</p>
 <p>This was the secret to the Collective&rsquo;s power: distributed decision-making coupled with distributed processing. By focusing lesser nodes on processing raw sensory input, more talented nodes&mdash;like Shade himself&mdash;were free to devote their complete energies to more specialized labor.</p>
