fixed missing italics in chapter two

--- a/dreams-must-die.html
+++ b/dreams-must-die.html
@@ -335,19 +335,19 @@ But when Shade gets infected with a dream, he finds himself on the run from his 
 <p>In practice, however, the Collective had found that physical proximity encouraged higher productivity. Thoughts could and did travel instantaneously around the planet, but the signal was stronger the closer you got to your target. Even Shade reported to work every day down at Dream Police Headquarters.</p>
 <p>Shade nodded to the other Dream Police as they arrived. When they were all in position, on either side of the factory gates, Boss called a meeting in his mind.</p>
 <p>They crowded into that small room, banging their knees against the metal desk. Shade leaned back against the windows that looked out of Boss&rsquo;s eyes, the shuttered venetian blinds crackling and crunching against his weight. The acrid smoke from Boss&rsquo;s burning stick made him cough.</p>
-<p>We all know why we&rsquo;re here, Boss said.</p>
+<p><em>We all know why we&rsquo;re here,</em> Boss said.</p>
 <p>They nodded.</p>
-<p>You don&rsquo;t need me to tell you this, Boss said, looking at them from under dropping eyebrows. You know already. But I&rsquo;ll say it because it&rsquo;s worth repeating.</p>
+<p><em>You don&rsquo;t need me to tell you this,</em> Boss said, looking at them from under dropping eyebrows. <em>You know already. But I&rsquo;ll say it because it&rsquo;s worth repeating.</em></p>
 <p>He paused. They all knew the words before Boss thought them, but got satisfaction in hearing him say it anyway.</p>
-<p>Dreams are in decline. Few of us can remember the last time we caught a Prime. And in all that time, there have been no new dreams. This is without precedent.</p>
+<p><em>Dreams are in decline. Few of us can remember the last time we caught a Prime. And in all that time, there have been no new dreams. This is without precedent.</em></p>
 <p>Boss met their gaze one by one.</p>
-<p>This could be the defining moment of human history. He jammed his finger down on his desk so hard the metal surface rang. When dreams are finally eradicated, the Collective will be free to devote its entire energy to the salvation of mankind.</p>
-<p>A cop Shade didn&rsquo;t know raised his hand. But where do Primes come from, Boss?</p>
-<p>Kann laughed. The City of Dreams, of course.</p>
-<p>A myth to scare little nodes with, I&rsquo;m afraid, Boss said. The truth is we don&rsquo;t know. But wherever they come from, this could be the last one.</p>
-<p>Seems almost a shame to unplugg him, thought another cop. Now we&rsquo;ll never know.</p>
-<p>Boss nodded. Which is why we aren&rsquo;t going to unplugg him. We&rsquo;re going to put him in a dream jacket and study him. Dissect him, if we have to. So we can understand his disease before it goes extinct.</p>
-<p>He pushed back his chair, stood up and saluted them. Make me proud, boys. Make the Collective proud.</p>
+<p><em>This could be the defining moment of human history.</em> He jammed his finger down on his desk so hard the metal surface rang. <em>When dreams are finally eradicated, the Collective will be free to devote its entire energy to the salvation of mankind.</em></p>
+<p>A cop Shade didn&rsquo;t know raised his hand. <em>But where do Primes come from, Boss?</em></p>
+<p>Kann laughed. <em>The City of Dreams, of course.</em></p>
+<p><em>A myth to scare little nodes with, I&rsquo;m afraid,</em> Boss said. <em>The truth is we don&rsquo;t know. But wherever they come from, this could be the last one.</em></p>
+<p><em>Seems almost a shame to unplugg him,</em> thought another cop. <em>Now we&rsquo;ll never know.</em></p>
+<p>Boss nodded. <em>Which is why we aren&rsquo;t going to unplugg him. We&rsquo;re going to put him in a dream jacket and study him. Dissect him, if we have to. So we can understand his disease before it goes extinct.</em></p>
+<p>He pushed back his chair, stood up and saluted them. <em>Make me proud, boys. Make the Collective proud.</em></p>
 <p>The factory whistle blew. Shift change. The IF workers streamed through the gates, hard hats askew, lunch pails limp in their tired hands.</p>
 <p>Shade head-hopped among them, felt their weariness. They had earned their daily six. With a pang of regret, he realized he&rsquo;d be seeing many of them soon. No doubt a large percentage had been unwittingly infected by the Dreamer Prime, and he and Kann would be ChemLobbing them soon.</p>
 <p>At his side, Kann quivered with excitement. You understand what this means?</p>
