fixed error in Also By

--- a/dreams-must-die.html
+++ b/dreams-must-die.html
@@ -3545,7 +3545,7 @@ J.M. Porup
 <p class="also_by_title"><a href="http://www.jmporup.com/food-free-at-last.html">Food-Free At Last: How I Learned To Eat Air</a></p>
 
 <p class="also_by"><span class="centered">With Shazam al-War bin al-Gorithm</span></p>
-<p class="also_by_title"><a href="http://www.jmporup.com/a-terrorist-converts.html">A Terrorist Converts: How I Stop Hating America</a></p>
+<p class="also_by_title"><a href="http://www.jmporup.com/a-terrorist-converts.html">A Terrorist Converts: How I Learned to Stop Hating America</a></p>
 <p class="also_by_title"><a href="http://www.jmporup.com/a-terrorist-converts-2.html">A Terrorist Converts: How I Learned to Love the NSA</a></p>
 <p class="also_by_title"><a href="http://www.jmporup.com/a-terrorist-converts-3.html">A Terrorist Converts: Why I&rsquo;m Voting For Hilary Clinton</a></p>
 
