updated front and back matter

--- a/dreams-must-die.html
+++ b/dreams-must-die.html
@@ -3,7 +3,7 @@
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"> 
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-<title>Dreams Must Die: A Fable of the Far Future</title>
+<title>Dreams Must Die</title>
     <style type="text/css">
       html, body, div, h1, h2, h3, h4, h5, h6, ul, ol, dl, li, dt, dd, p, pre, table, th, td, tr { margin: 0; padding: 0em; }
 p
@@ -162,7 +162,7 @@ p.inline_footnote
   <body>
 
 <p>&nbsp;</p>
-<p class="blurb_text">
+<p class="blurb">
 <strong>
 The time for dreaming is over.
 </strong>
@@ -179,6 +179,8 @@ Jimmy Shade kills dreams. It&rsquo;s his job. As a member of the elite Dream Pol
 But when Shade gets infected with a dream, he finds himself on the run from his former colleagues. He must choose between his love for the Collective&mdash;and the dream he cannot live without.
 </em>
 </p>
+
+<p class="blurb">Want a free copy of <em>Dreams Must Die</em>? Willing to write an honest Amazon review? Shoot me an email at <strong>jm@porup.com</strong> with the Subject: "I Want Bat Guano!" and I, the author, will send you a free ebook for your reading and reviewing pleasure.</p>
 
 <p class="title"><span class="centered">DREAMS MUST DIE</span></p>
 <p>&nbsp;</p>
@@ -3543,11 +3545,13 @@ J.M. Porup
 <p>&nbsp;</p>
 <p class="also_by"><span class="centered">With Dr. Robert Jones MD PhD DDS ODD</span></p>
 <p class="also_by_title"><a href="http://www.jmporup.com/food-free-at-last.html">Food-Free At Last: How I Learned To Eat Air</a></p>
+<p class="also_by_title"><a href="http://www.jmporup.com/food-free-at-last-2.html">Food-Free At Last: 100 Air-Only Recipes</a></p>
+<p class="also_by_title"><a href="http://www.jmporup.com/food-free-at-last-3.html">Food-Free At Last: Better with Bacon</a></p>
 
 <p class="also_by"><span class="centered">With Shazam al-War bin al-Gorithm</span></p>
 <p class="also_by_title"><a href="http://www.jmporup.com/a-terrorist-converts.html">A Terrorist Converts: How I Learned to Stop Hating America</a></p>
 <p class="also_by_title"><a href="http://www.jmporup.com/a-terrorist-converts-2.html">A Terrorist Converts: How I Learned to Love the NSA</a></p>
-<p class="also_by_title"><a href="http://www.jmporup.com/a-terrorist-converts-3.html">A Terrorist Converts: Why I&rsquo;m Voting For Hilary Clinton</a></p>
+<p class="also_by_title"><a href="http://www.jmporup.com/a-terrorist-converts-3.html">A Terrorist Converts: Why I&rsquo;m Voting For Hillary Clinton</a></p>
 
 <p class="copyright_title"><span class="centered">Dreams Must Die</span></p>
 <p>&nbsp;</p>
