--- a/dreams-must-die.html
+++ b/dreams-must-die.html
@@ -180,7 +180,7 @@ But when Shade gets infected with a dream, he finds himself on the run from his 
 </em>
 </p>
 
-<p class="blurb">Want a free copy of <em>Dreams Must Die</em>? Willing to write an honest Amazon review? Shoot me an email at <strong>jm@porup.com</strong> with the Subject: "I Want Bat Guano!" and I, the author, will send you a free ebook for your reading and reviewing pleasure.</p>
+<p class="blurb">Want a free copy of <em>Dreams Must Die</em>? Willing to write an honest Amazon review? Shoot me an email at <strong>jm@porup.com</strong> with the Subject: "Kill My Dreams!" and I, the author, will send you a free ebook for your reading and reviewing pleasure.</p>
 
 <p class="title"><span class="centered">DREAMS MUST DIE</span></p>
 <p>&nbsp;</p>
