added free download image to front matter

--- a/dreams-must-die.html
+++ b/dreams-must-die.html
@@ -181,7 +181,15 @@ But when Shade gets infected with a dream, he finds himself on the run from his 
 </em>
 </p>
 
-<p class="blurb">Want a free copy of <em>Dreams Must Die</em>? Willing to write an honest Amazon review? Shoot me an email at <strong>jm@porup.com</strong> with the Subject: "Kill My Dreams!" and I, the author, will send you a free ebook for your reading and reviewing pleasure.</p>
+<p class="blurb" style="text-align: center">
+<img src="freedownload-thesecondbatguano.png" alt="Get your Free Book"></img>
+</p>
+<p>
+Sign up for the author&rsquo;s New Releases mailing list and get a free copy of his hardboiled spy thriller, <strong><em>&ldquo;The Second Bat Guano War.&rdquo;</em></strong>
+</p>
+<p>
+Click here to get started: <a href="//JMPorup.com/free_download">JMPorup.com/free_download</a>
+</p>
 
 <p class="title"><span class="centered">DREAMS MUST DIE</span></p>
 <p>&nbsp;</p>
