added free book back matter

--- a/dreams-must-die.html
+++ b/dreams-must-die.html
@@ -184,11 +184,16 @@ But when Shade gets infected with a dream, he finds himself on the run from his 
 <p class="blurb" style="text-align: center">
 <img src="freedownload-thesecondbatguano.png" alt="Get your Free Book"></img>
 </p>
+</p>
+<p>&nbsp;
+</p>
 <p>
 Sign up for the author&rsquo;s New Releases mailing list and get a free copy of his hardboiled spy thriller, <strong><em>&ldquo;The Second Bat Guano War.&rdquo;</em></strong>
 </p>
+<p>&nbsp;
+</p>
 <p>
-Click here to get started: <a href="//JMPorup.com/free_download">JMPorup.com/free_download</a>
+Click here to get started: <a href="https://www.JMPorup.com/free_download">www.JMPorup.com</a>
 </p>
 
 <p class="title"><span class="centered">DREAMS MUST DIE</span></p>
